--- a/app.yaml
+++ b/app.yaml
@@ -5,5 +5,11 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /css
+  static_dir: css
+- url: /img
+  static_dir: img
+- url: /js
+  static_dir: js
 - url: /.*
   script: app.Controler.application
