controler and app.yaml to serve intro page via templates and static folders

--- a/app.yaml
+++ b/app.yaml
@@ -11,5 +11,7 @@ handlers:
   static_dir: img
 - url: /js
   static_dir: js
+- url: /fonts
+  static_dir: fonts
 - url: /.*
   script: app.Controler.application
