--- a/app.yaml
+++ b/app.yaml
@@ -14,4 +14,4 @@ handlers:
 - url: /fonts
   static_dir: fonts
 - url: /.*
-  script: app.Controler.application
+  script: app.Controller.application
